--- a/views/configuracion/saldo_inicial.html
+++ b/views/configuracion/saldo_inicial.html
@@ -1,123 +1,112 @@
 {{extend 'layout.html'}}
-
-<link href="{{=URL('static', 'chosen/chosen.css')}}" rel="stylesheet">
-<link href="{{=URL('static', 'css/tabs.css')}}" rel="stylesheet">
-
-
-<style>
-
-
-    
-</style>
-
-
-
-                                <!-- widget grid -->
-                                <section id="widget-grid" class="">
-                                        <!-- row -->
-                                        <div class="row">
-                                                <article class="col-sm-12">
-                                                        <!-- new widget -->
-                                                        <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
-                                                                <!-- widget options:
-                                                                usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
-                                                                data-widget-colorbutton="false"
-                                                                data-widget-editbutton="false"
-                                                                data-widget-togglebutton="false"
-                                                                data-widget-deletebutton="false"
-                                                                data-widget-fullscreenbutton="false"
-                                                                data-widget-custombutton="false"
-                                                                data-widget-collapsed="true"
-                                                                data-widget-sortable="false"
-                                                                -->
-                                                                <header>
-                                                                        <span class="widget-icon"> <i class="fa fa-building txt-color-darken"></i> </span>
-                                                                    <h2>Configuración del Saldo Inicial</h2>
-                                                                        <ul class="nav nav-tabs pull-right in" id="myTab">
-                                                                                <li class="active">
-                                                                                        <a data-toggle="tab" href="#s1"><i class="fa fa-bar-chart-o"></i> <span class="hidden-mobile hidden-tablet">Configuración</span></a>
-                                                                                </li>
-                                                                        </ul>
-                                                                </header>
-                                                                <!-- widget div-->
-                                                                <div class="no-padding">
-                                                                        <!-- widget edit box -->
-                                                                        <div class="jarviswidget-editbox">
-                                                                                test
-                                                                        </div>
-                                                                        <!-- end widget edit box -->
-                                                                        <div class="widget-body">
-                                                                                <!-- content -->
-                                                                                <div id="myTabContent" class="tab-content">
-                                                                                        <div class="tab-pane fade active in padding-10 no-padding-bottom" id="s1">
-           <div class="padding-10">
-                <ul id="expList">
-                           <form action="{{URL('configuracion','saldo_inicial')}}" method="post" enctype="multipart/form-data">  
-                              
-                                                            
-                            <div id="div_error" class="alert alert-block alert-warning" style="display:None">
-                                   <a class="close" data-dismiss="alert" href="#">×</a>
-                                    <h4 class="alert-heading">
-                                {{if tipo_msg=='error': }}
-                                    Advertencia!
-                                {{elif tipo_msg=='exito':}}
-                                    Éxito!
-                                {{pass}}
-                                   </h4>
-                                {{=msg}}
-                            </div>
-                                                        
-                                                        
-                                     <div class="table">
-                                                       <div class="fila">
-                                                       <div class="cell">
-                                                           Elija el archivo csv de saldo inicial:
-                                                       </div>
-                                                       <div class="cell">
-                                                           <input name="csv_saldo_inicial" type="file" style="width:450px;">
-                                                        </div> 
-                                                        </div>
-                                                         
-                                                           <div class="fila">
-                                                            <div class="cell">
-                                                                
-                                                            </div>
-                                                            <div class="cell">
-                                                                <input type="submit" value="Enviar">
-                                                            </div>
-                                                           </div>
-                                                            
-                             </div>
-                                                       
-                   </form>
-                                                      
-                                                     
-
-                                                    </ul>
-                                                                                                </div>
-                                                                                        </div>
-                                                                                        <!-- end s1 tab pane -->
-                                                                                </div>
-                                                                                <!-- end content -->
-                                                                        </div>
-                                                                </div>
-                                                                <!-- end widget div -->
-                                                        </div>
-                                                        <!-- end widget -->
-                                                </article>
-                                        </div>
-                                        <!-- end row -->
-                                </section>
-                                <!-- end widget grid -->
-
-<script src="{{=URL('static', 'chosen/chosen.jquery.js')}}" type="text/javascript"></script>
-
-  <script type="text/javascript">
-     {{if tipo_msg=='error':}}
-          $('#div_error').removeClass("alert-success").addClass("alert-warning")
-          $('#div_error').delay(1000).fadeIn(2000);
-      {{elif tipo_msg=='exito':}}
-           $('#div_error').removeClass("alert-warning").addClass("alert-success")
-          $('#div_error').delay(1000).fadeIn(2000); 
-      {{pass}}
-  </script>
+<div class="row">
+   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <legend>
+         <h1>
+            <p>
+               <i class="fa-fw fa fa-dollar"></i>
+               Saldo inicial
+            </p>
+            <small>Carga de saldo inicial</small>
+         </h1>
+      </legend>
+   </div>
+</div>
+{{if tipo_msg=='error': }}
+<div class="alert alert-block alert-danger">
+   <h4 class="alert-heading">
+      Error
+   </h4>
+{{elif tipo_msg=='exito':}}
+<div class="alert alert-block alert-success">
+   <h4 class="alert-heading">
+      Éxito en la carga
+   </h4>
+{{elif tipo_msg=='info':}}
+<div class="alert alert-block alert-info">
+   <h4 class="alert-heading">
+      Listo para la carga de saldos
+   </h4>
+{{pass}}
+   <p>
+      <strong>{{=msg}}</strong>
+   </p>
+</div>
+<section id="widget-grid" class="">
+   <div class="row">
+      <article class="col-sm-12 col-md-12 col-lg-6 sortable-grid ui-sortable">
+         <div id="wid-id-0" class="jarviswidget jarviswidget-sortable" data-widget-editbutton="false" data-widget-colorbutton="false" role="widget">
+            <header role="heading">
+               <span class="widget-icon">
+                  <i class="fa fa-edit"></i>
+               </span>
+               <h2>Formulario de carga CSV</h2>
+            </header>
+            <div role='content'>
+               <div class="widget-body">
+                  <form class="form-horizontal" method="POST" action="{{=URL('configuracion','saldo_inicial')}}">
+                     <div class="row">
+                        <div class="col-md-12 col-sm-12">
+                           <legend>Archivo CSV</legend>
+                           <input name="csv_saldo_inicial" type="file" required>       
+                        </div>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-6">                           
+                           <button class="btn btn-default" onclick={{=URL('configuracion','saldo_inicial')}}> Cancelar </button>
+                           <input class="btn btn-primary" type="submit" value="Cargar">
+                        </div>
+                     </div>
+                  </form>
+               </div>
+            </div>
+         </div>
+      </article>
+      <article class="col-sm-12 col-md-12 col-lg-6 sortable-grid ui-sortable">
+         <div id="wid-id-0" class="jarviswidget jarviswidget-sortable" data-widget-editbutton="false" data-widget-colorbutton="false" role="widget">
+            <header role="heading">
+               <span class="widget-icon">
+                  <i class="fa fa-eye"></i>
+               </span>
+               <h2>Ejemplo CSV</h2>
+            </header>
+            <div role='content'>
+               <div class="widget-body">
+                  <div class="widget-body no-padding">
+                     <div class="alert alert-info no-margin fade in">
+                        <i class="fa-fw fa fa-info"></i>
+                        No incluir el encabezado.
+                     </div>
+                     <div class="table-responsive">
+                        <table  class="table table-bordered table-striped">
+                           <thead>
+                              <tr>
+                                 <th>No. Cuenta</th>
+                                 <th>Concepto</th>
+                                 <th>Debe</th>
+                                 <th>Haber</th>
+                              </tr>
+                           </thead>
+                           <tbody>
+                              <tr>
+                                 <td>1.1.1.1</td>
+                                 <td>Saldo inicial de caja</td>
+                                 <td>100.0</td>
+                                 <td>100.0</td>
+                              </tr>
+                              <tr>
+                                 <td>1.2.1</td>
+                                 <td>Saldo inicial de la cuenta 1.2.1</td>
+                                 <td>10.0</td>
+                                 <td>10.0</td>
+                              </tr>
+                           </tbody>
+                        </table>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </article>
+   </div>
+</section>
