--- a/views/layout.html
+++ b/views/layout.html
@@ -769,7 +769,15 @@ header,h1,h2,h3,h4{
 
 		<!-- Full Calendar -->
 		<script src="{{=URL('static/smartadmin','js/plugin/fullcalendar/jquery.fullcalendar.min.js')}}"></script>
-
+		<!-- PAGE RELATED PLUGIN(S) -->
+		<script src="{{=URL('static', 'smartadmin/js/plugin/datatables/jquery.dataTables-cust.min.js')}}"></script>
+		<script src="{{=URL('static', 'smartadmin/js/plugin/datatables/ColReorder.min.js')}}"></script>
+		<script src="{{=URL('static', 'smartadmin/js/plugin/datatables/FixedColumns.min.js')}}"></script>
+		<script src="{{=URL('static', 'smartadmin/js/plugin/datatables/ColVis.min.js')}}"></script>
+		<script src="{{=URL('static', 'smartadmin/js/plugin/datatables/ZeroClipboard.min.js')}}"></script>
+		<script src="{{=URL('static', 'smartadmin/js/plugin/datatables/media/js/TableTools.min.js')}}"></script>
+		<script src="{{=URL('static', 'smartadmin/js/plugin/datatables/DT_bootstrap.js')}}"></script>
+		<script src="{{=URL('static', 'smartadmin/js/plugin/datatables/jquery.dataTables-cust.min.js')}}"></script>
 
 		<!-- Your GOOGLE ANALYTICS CODE Below -->
 		<script type="text/javascript">
