--- a/views/configuracion/estado_resultados.html
+++ b/views/configuracion/estado_resultados.html
@@ -59,7 +59,7 @@ table > tbody > tr:hover{
          <!-- new widget -->
          <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
             <header>
-               <span class="widget-icon"> <i class="fa fa-building txt-color-darken"></i> </span>
+               <span class="widget-icon"> <i class="fa fa-cog txt-color-darken"></i> </span>
                <h2>Configuración del Reporte: Estado de Resultados</h2>
             </header>
             <!-- widget div-->
